# rust-react-auth

./: .gitattributes  LICENSE  README.md
auth-window/: .gitignore
auth-window/backend/: .env  Cargo.toml
auth-window/backend/src/: auth_middleware.rs  jwt.rs  main.rs  security.rs
auth-window/frontend/: index.html  package-lock.json  package.json
auth-window/frontend/src/: App.module.scss  App.tsx  AuthForm.module.scss  AuthForm.tsx  RegisterForm.module.scss  RegisterForm.tsx
