[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] } 
jsonwebtoken = "9.3.1"
chrono = "0.4"
dotenv = "0.15"
validator = "0.16"
validator_derive = "0.16"