[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.4"
rand_core = "0.6"
jsonwebtoken = { version = "9.3", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
validator = "0.16"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }